Change source type

--- a/local/props.conf
+++ b/local/props.conf
@@ -1,2 +1,2 @@
-[jaf]
-EXTRACT-jaf = \S+\s+\S+\s+(?<log_level>\S+)\s+(?<rule_action>\S+)\s+(?<jvc_name>\S+)\s+(?<rule_category>\w+):(?<rule_subcategory>\w*)\s+\[(?<rule_parameter>.*?)\] - \[(?<rule_data>.*?)\]
+[waratek_security]
+EXTRACT-waratek_security = \S+\s+\S+\s+(?<log_level>\S+)\s+(?<rule_action>\S+)\s+(?<jvc_name>\S+)\s+(?<rule_category>\w+):(?<rule_subcategory>\w*)\s+\[(?<rule_parameter>.*?)\] - \[(?<rule_data>.*?)\]
