Change source type

--- a/local/savedsearches.conf
+++ b/local/savedsearches.conf
@@ -6,4 +6,4 @@ display.general.type = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = waratek
 request.ui_dispatch_view = search
-search = sourcetype=jaf rule_category=SQL | rename rule_data as injected_data | table _time injected_data log_level
+search = sourcetype=waratek_security rule_category=SQL | rename rule_data as injected_data | table _time injected_data log_level
